chat bubble & animations added. header nav active color added and page headers removed

--- a/src/components/ThreeDots/sass/variables.scss
+++ b/src/components/ThreeDots/sass/variables.scss
@@ -6,7 +6,7 @@ $dot-width: 10px !default;
 $dot-height: 10px !default;
 $dot-radius: $dot-width/2 !default;
 
-$dot-color: #9880ff !default;
+$dot-color: #fff !default;
 $dot-bg-color: $dot-color !default;
 $dot-before-color: $dot-color !default;
 $dot-after-color: $dot-color !default;
