--- a/src/index.scss
+++ b/src/index.scss
@@ -108,7 +108,8 @@ $background-dim: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.5));
 
 html,
 body {
-  height: 100%;
+  min-height: 100%;
+  height: fit-content;
 }
 
 #root {
@@ -493,7 +494,6 @@ header nav {
   border-radius: $radius;
   box-shadow: 0 0 15px 2px $neon-cyan;
 
-
   button {
     background: blueviolet;
     color: white;
@@ -585,6 +585,7 @@ header nav {
   margin-bottom: 0;
   background: $background-dim, url('./images/palm-trees.jpg');
   background-size: cover;
+  background-position: center;
   height: 100%;
 }
 
